--- a/src/View/CustomerStatistics.fxml
+++ b/src/View/CustomerStatistics.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane fx:controller="Controller.CustomerStatisticController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="737.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="768.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.CustomerStatisticController">
    <children>
-      <Label layoutX="276.0" layoutY="180.0" text="Appointment Type" />
+      <Label layoutX="274.0" layoutY="180.0" text="Appointments By  Type" />
       <ComboBox fx:id="customerNameBox" layoutX="14.0" layoutY="91.0" onAction="#showCustomerName" prefWidth="150.0" promptText="Customer" />
       <ComboBox fx:id="customerAppointmentType" layoutX="177.0" layoutY="91.0" onAction="#showCustomerType" prefWidth="150.0" promptText="Type" />
       <ComboBox fx:id="customerAppointmentMonth" layoutX="337.0" layoutY="91.0" onAction="#showCustomerMonth" prefWidth="150.0" promptText="Month" />
@@ -22,17 +17,19 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <Button layoutX="546.0" layoutY="221.0" mnemonicParsing="false" onAction="#printReportByType" prefHeight="27.0" prefWidth="140.0" text="Print Report ByType" />
-      <Button layoutX="546.0" layoutY="175.0" mnemonicParsing="false" onAction="#printReportByMonth" text=" Print Report By Month" />
-      <Label layoutX="164.0" layoutY="180.0" text="Customer Name" />
-      <Label layoutX="396.0" layoutY="180.0" text="Appointment Month" />
-      <Separator layoutX="264.0" layoutY="135.0" orientation="VERTICAL" prefHeight="200.0" />
-      <Separator layoutX="26.0" layoutY="201.0" prefHeight="3.0" prefWidth="491.0" />
-      <Separator layoutX="384.0" layoutY="134.0" orientation="VERTICAL" prefHeight="200.0" prefWidth="6.0" />
-      <Label layoutX="14.0" layoutY="211.0" text="number of appointments" />
-      <Separator layoutX="157.0" layoutY="143.0" orientation="VERTICAL" prefHeight="200.0" />
+      <Button layoutX="593.0" layoutY="222.0" mnemonicParsing="false" onAction="#printReportByType" prefHeight="27.0" prefWidth="140.0" text="Print Report ByType" />
+      <Button layoutX="593.0" layoutY="184.0" mnemonicParsing="false" onAction="#printReportByMonth" text=" Print Report By Month" />
+      <Label layoutX="153.0" layoutY="180.0" text="All Appointments" />
+      <Label layoutX="415.0" layoutY="180.0" text="Appointments By Month" />
+      <Separator layoutX="252.0" layoutY="135.0" orientation="VERTICAL" prefHeight="200.0" />
+      <Separator layoutX="59.0" layoutY="201.0" prefHeight="3.0" prefWidth="491.0" />
+      <Separator layoutX="409.0" layoutY="135.0" orientation="VERTICAL" prefHeight="200.0" prefWidth="6.0" />
+      <Label layoutX="12.0" layoutY="211.0" text="Number of Appointments" />
+      <Separator layoutX="150.0" layoutY="136.0" orientation="VERTICAL" prefHeight="200.0" />
       <Label fx:id="customerNameText" layoutX="194.0" layoutY="211.0" text="0" />
-      <Label fx:id="appointmentTypeText" layoutX="312.0" layoutY="211.0" text="0" />
-      <Label fx:id="appointmentMonthText" layoutX="436.0" layoutY="213.0" text="0" />
+      <Label fx:id="appointmentTypeText" layoutX="323.0" layoutY="211.0" text="0" />
+      <Label fx:id="appointmentMonthText" layoutX="466.0" layoutY="214.0" text="0" />
+      <Button layoutX="594.0" layoutY="146.0" mnemonicParsing="false" onAction="#printAllAppointments" text="Print All Appointments" />
+      <Button fx:id="test" layoutX="664.0" layoutY="30.0" mnemonicParsing="false" onAction="#test" text="Button" />
    </children>
 </AnchorPane>
